# VideoHV-Agent

./: README.md  index.html
VideoHV-Agent/: README.md  pyproject.toml
VideoHV-Agent/load_data/intentqa/: Intentqa_anno.json
VideoHV-Agent/load_data/nextqa/: nextqa-atphard_anno.json  nextqa_anno.json
VideoHV-Agent/scripts/: run_egoschema_openai.py
VideoHV-Agent/video_hv/: __init__.py  config.py  media.py  verifier.py  vision_tools.py
VideoHV-Agent/video_hv/pipelines/: __init__.py
VideoHV-Agent/video_hv/pipelines/egoschema_openai/: __init__.py  cli.py  constants.py  openai_stages.py  prompts.py  runner.py  schemas.py
